--- a/html/index.html
+++ b/html/index.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>VG Blog</title>
+<!--<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+<link rel="manifest" href="/manifest.json"> !-->
+<link rel="icon" type="image/png" href="../Img/favicons/favicon-32x32.png" sizes="32x32">
+<meta name="theme-color" content="#ffffff">
     <link rel=stylesheet href="../css/normalize.css">
     <link rel=stylesheet href="../css/grid.css">
     <link rel=stylesheet href="../css/Style.css">
 </head>
 <body>
-
 
 
 </body>
