finished front page styling, began template for content pages

--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
 
     <link rel=stylesheet href="../css/normalize.css">
     <link rel=stylesheet href="../css/grid.css">
-    <link rel=stylesheet href="../css/style2.css">
+    <link rel=stylesheet href="../css/style.css">
     <script src="script.js"></script>
 </head>
 <body>
@@ -29,7 +29,7 @@
         </div>
     <nav>
         <ul>
-            <li><a href=" ">Retrospective</a></li>
+            <li><a href="../html/story-template.html">Retrospective</a></li>
             <li><a href=" ">Retry</a></li>
             <li><a href=" ">News</a></li>
             <li><a href=" ">About</a></li>
@@ -48,7 +48,7 @@
                         <li>Resident Evil HD</li>
                         <li>Final Fantasy XV</li>
                        </ul>
-    <h3>On the List</h3>
+                       <h3>On the </br> List</h3>
                 <ul>
                     <li>The Last Guardian</li>
                     <li>Gravity Rush 2</li>
